libs/preprocessor/tests/errors/pe18_eoi_ifstate/source.hpp
#define test 1

#if test
value = 1;
#else
value = 0;
